# ComfyUI-anima-Resolutions

./: LICENSE  README.md  __init__.py  anima_alignment_nodes.py  anima_resolutions.py  pyproject.toml
js/: anima_resolutions.js
