[project]
name = "comfyui-anima-resolutions"
description = "Resolution, 32-pixel alignment, and image-scaling utilities for Anima workflows in ComfyUI."
version = "1.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/cyberdeliaAI/ComfyUI-anima-Resolutions"

[tool.comfy]
PublisherId = "cyberdelia"
DisplayName = "Anima Resolutions"
Icon = "https://raw.githubusercontent.com/cyberdeliaAI/ComfyUI-anima-Resolutions/main/assets/icon.png"
